# RecSys_cold_start

./: .gitignore  README.md  cold-item.ipynb  cold-user.ipynb  pyproject.toml
Datasets/: README.md
cold-item/: README.md  config.py  main_infer.py  main_train.py
cold-item-baseline/src/: als_model.py  ranker_model.py  split_warm_cold.py
cold-item-ranker-only-experiment/: README.md
cold-item-ranker-only-experiment/src/: als_model.py  candidate_generator.py  cold_vector_builder.py  preprocessing.py  similarity_index.py  train_pipeline.py  utils.py
cold-item/app/: README.md  main.py  schemas.py
cold-item/src/: feature_builder.py  hybrid_recommender.py  inference_pipeline.py  maxvol_selector.py  popular_selector.py  preprocessing.py  ranker_model.py  retrieval_model.py  train_pipeline.py
cold-user/: README.md  config.py  main_train.py
cold-user-and-item/: README.md  config.py  main_api.py  main_infer.py  requirements.txt
cold-user-and-item/api/: app.py  model_store.py  routes.py  schemas.py  service.py
cold-user-and-item/src/: als_model.py  cold_user_recommender.py  popular_selector.py  split_warm_cold_users.py  train_pipeline.py  utils.py
cold-user/src/: als_model.py  data_loader.py  feature_builder.py  hybrid_recommender.py  inference_pipeline.py  maxvol_selector.py  regressor_model.py  split_warm_cold.py
tests/: README.md  comparison_summary.csv  comparison_summary.md
tests/ecommerce/: als_metrics_eval_100_no_filter.csv  metrics_eval_100.csv
tests/ecommerce_consumer/: als_metrics_full_5000_no_filter.csv  metrics_full_5000.csv
(+13 files in other folders)
