[project]
name = "recsys-cold-start"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "implicit>=0.7",
    "catboost>=1.2",
    "joblib>=1.3",
]

[project.optional-dependencies]
api = [
    "fastapi[standard]>=0.136.1",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]
